// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`create-partial-view should create a partial view 1`] = `
{
  "content": [],
  "structuredContent": {
    "message": "Partial view created successfully",
    "path": "/_TestCreatePartialView.cshtml",
  },
}
`;

exports[`create-partial-view should create partial view with parent folder 1`] = `
{
  "content": [],
  "structuredContent": {
    "message": "Partial view created successfully",
    "path": "/_TestPartialViewParentFolder/_TestCreatePartialView.cshtml",
  },
}
`;

exports[`create-partial-view should handle existing partial view name 1`] = `
{
  "content": [],
  "isError": true,
  "structuredContent": {
    "detail": "A partial view with the same path already exists",
    "operationStatus": "AlreadyExists",
    "status": 400,
    "title": "Partial view already exists",
    "type": "Error",
  },
}
`;
